CMake: Regenerate projects to use new qt_internal_ API
Modify special case locations to use the new API as well.

Task-number: QTBUG-86815
Change-Id: I4a690095fcd4b1141550de86b6820ae2dd579429
Reviewed-by: Cristian Adam <cristian.adam@qt.io>

--- a/src/imports/controls/CMakeLists.txt
+++ b/src/imports/controls/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## qtquickcontrols2plugin Plugin:
 #####################################################################
 
-qt_add_qml_module(qtquickcontrols2plugin
+qt_internal_add_qml_module(qtquickcontrols2plugin
     URI "QtQuick.Controls"
     VERSION "6.0" # special case
     DESIGNER_SUPPORTED
@@ -39,7 +39,7 @@ qt_add_qml_module(qtquickcontrols2plugin
 
 ## Scopes:
 #####################################################################
-qt_add_docs(qtquickcontrols2plugin
+qt_internal_add_docs(qtquickcontrols2plugin
     doc/qtquickcontrols.qdocconf
 )
 
