--- a/src/imports/templates/CMakeLists.txt
+++ b/src/imports/templates/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## qtquicktemplates2plugin Plugin:
 #####################################################################
 
-qt_add_qml_module(qtquicktemplates2plugin
+qt_internal_add_qml_module(qtquicktemplates2plugin
     URI "QtQuick.Templates"
     VERSION "6.0" # special case
     CLASSNAME QtQuickTemplates2Plugin
