--- a/src/quickcontrols2/CMakeLists.txt
+++ b/src/quickcontrols2/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## QuickControls2 Module:
 #####################################################################
 
-qt_add_module(QuickControls2
+qt_internal_add_module(QuickControls2
     GENERATE_METATYPES
     SOURCES
         qquickdummyregistration_p.h
