--- a/tests/auto/qquickstyle/CMakeLists.txt
+++ b/tests/auto/qquickstyle/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE test_data_glob
     ${CMAKE_CURRENT_SOURCE_DIR}/data/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_qquickstyle
+qt_internal_add_test(tst_qquickstyle
     SOURCES
         ../shared/qtest_quickcontrols.h
         ../shared/util.cpp ../shared/util.h
@@ -41,7 +41,7 @@ set(qmake_custom_resource_files
     "data/Custom/qmldir"
 )
 
-qt_add_resource(tst_qquickstyle "qmake_custom"
+qt_internal_add_resource(tst_qquickstyle "qmake_custom"
     PREFIX
         "/"
     FILES
@@ -55,12 +55,12 @@ qt_add_resource(tst_qquickstyle "qmake_custom"
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_qquickstyle CONDITION ANDROID OR IOS
+qt_internal_extend_target(tst_qquickstyle CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_qquickstyle CONDITION NOT ANDROID AND NOT IOS
+qt_internal_extend_target(tst_qquickstyle CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
