--- a/tests/auto/qquickuniversalstyleconf/CMakeLists.txt
+++ b/tests/auto/qquickuniversalstyleconf/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE test_data_glob
     data/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_qquickuniversalstyleconf
+qt_internal_add_test(tst_qquickuniversalstyleconf
     SOURCES
         ../shared/qtest_quickcontrols.h
         ../shared/util.cpp ../shared/util.h
@@ -36,7 +36,7 @@ set(qquickuniversalstyleconf_resource_files
     "qtquickcontrols2.conf"
 )
 
-qt_add_resource(tst_qquickuniversalstyleconf "qquickuniversalstyleconf"
+qt_internal_add_resource(tst_qquickuniversalstyleconf "qquickuniversalstyleconf"
     PREFIX
         "/"
     FILES
@@ -50,12 +50,12 @@ qt_add_resource(tst_qquickuniversalstyleconf "qquickuniversalstyleconf"
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_qquickuniversalstyleconf CONDITION ANDROID OR IOS
+qt_internal_extend_target(tst_qquickuniversalstyleconf CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_qquickuniversalstyleconf CONDITION NOT ANDROID AND NOT IOS
+qt_internal_extend_target(tst_qquickuniversalstyleconf CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
