--- a/tests/auto/revisions/CMakeLists.txt
+++ b/tests/auto/revisions/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_revisions Test:
 #####################################################################
 
-qt_add_test(tst_revisions
+qt_internal_add_test(tst_revisions
     SOURCES
         tst_revisions.cpp
     PUBLIC_LIBRARIES
