--- a/tests/auto/styleimports/CMakeLists.txt
+++ b/tests/auto/styleimports/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE test_data_glob
     data/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_styleimports
+qt_internal_add_test(tst_styleimports
     SOURCES
         ../shared/qtest_quickcontrols.h
         ../shared/util.cpp ../shared/util.h
@@ -38,7 +38,7 @@ set(qmake_resourcestyle_resource_files
     "ResourceStyle/qmldir" # special case
 )
 
-qt_add_resource(tst_styleimports "qmake_resourcestyle"
+qt_internal_add_resource(tst_styleimports "qmake_resourcestyle"
     PREFIX
         "/"
     BASE
@@ -54,12 +54,12 @@ qt_add_resource(tst_styleimports "qmake_resourcestyle"
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_styleimports CONDITION ANDROID OR IOS
+qt_internal_extend_target(tst_styleimports CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_styleimports CONDITION NOT ANDROID AND NOT IOS
+qt_internal_extend_target(tst_styleimports CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
