--- a/tests/auto/accessibility/CMakeLists.txt
+++ b/tests/auto/accessibility/CMakeLists.txt
@@ -14,7 +14,7 @@ file(GLOB_RECURSE test_data_glob
     data/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_accessibility
+qt_internal_add_test(tst_accessibility
     SOURCES
         ../shared/qtest_quickcontrols.h
         ../shared/util.cpp ../shared/util.h
@@ -42,12 +42,12 @@ qt_add_test(tst_accessibility
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_accessibility CONDITION ANDROID OR IOS
+qt_internal_extend_target(tst_accessibility CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_accessibility CONDITION NOT ANDROID AND NOT IOS
+qt_internal_extend_target(tst_accessibility CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
