--- a/tests/auto/customization/CMakeLists.txt
+++ b/tests/auto/customization/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE test_data_glob
     data/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_customization
+qt_internal_add_test(tst_customization
     SOURCES
         ../shared/qtest_quickcontrols.h
         ../shared/util.cpp ../shared/util.h
@@ -34,12 +34,12 @@ qt_add_test(tst_customization
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_customization CONDITION ANDROID OR IOS
+qt_internal_extend_target(tst_customization CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_customization CONDITION NOT ANDROID AND NOT IOS
+qt_internal_extend_target(tst_customization CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
