--- a/tests/benchmarks/quick/CMakeLists.txt
+++ b/tests/benchmarks/quick/CMakeLists.txt
@@ -1,4 +1,4 @@
 # Generated from quick.pro.
 
 add_subdirectory(events)
-# add_subdirectory(colorresolving) # special case to be ported
+add_subdirectory(colorresolving)
