NativeStyle: add focus frame to the macOS style
This patch will add a focus frame to the macOS style.
We use one focus frame item that we move around according
to changes to the focus object.

It's normally the background delegate's responsibility to
draw a focus frame, so we take care to only draw the
native focus frame for controls with default delegates.
(to be consistent with the other styles)

Change-Id: Iaa7202675c1aad2fc19682563ac1afb6e686c105
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>

--- a/src/imports/nativestyle/CMakeLists.txt
+++ b/src/imports/nativestyle/CMakeLists.txt
@@ -39,6 +39,7 @@ qt_add_qml_module(qtquickcontrols2nativestyleplugin
     INCLUDE_DIRECTORIES
         items
         qstyle
+        util
     LIBRARIES
         Qt::CorePrivate
         Qt::GuiPrivate
@@ -69,11 +70,26 @@ qt_extend_target(qtquickcontrols2nativestyleplugin CONDITION MACOS
     SOURCES
         qstyle/mac/qquickmacstyle_mac.mm qstyle/mac/qquickmacstyle_mac_p.h
         qstyle/mac/qquickmacstyle_mac_p_p.h
+        util/qquickmacfocusframe.h util/qquickmacfocusframe.mm
     INCLUDE_DIRECTORIES
         qstyle/mac
     LIBRARIES
         ${FWAppKit}
 )
+
+if(MACOS)
+    # Resources:
+    set(qmake_immediate_resource_files
+        "util/FocusFrame.qml"
+    )
+
+    qt_add_resource(qtquickcontrols2nativestyleplugin "qmake_immediate"
+        PREFIX
+            "/"
+        FILES
+            ${qmake_immediate_resource_files}
+    )
+endif()
 
 qt_extend_target(qtquickcontrols2nativestyleplugin CONDITION WIN32
     SOURCES
