Fix static build
The register_types() function was optimized away by the linker and the
imports would not be found.

Change-Id: I3d98602daf78996399630b7b1296cc5dc0d3da05
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/imports/controls/CMakeLists.txt
+++ b/src/imports/controls/CMakeLists.txt
@@ -30,6 +30,7 @@ qt_internal_add_qml_module(qtquickcontrols2plugin
         Qt::Gui
         Qt::Qml
         Qt::Quick
+        Qt::QuickControls2
 )
 
 #### Keys ignored in scope 1:.:.:controls.pro:<TRUE>:
