--- a/src/imports/controls/windows/CMakeLists.txt
+++ b/src/imports/controls/windows/CMakeLists.txt
@@ -51,6 +51,7 @@ set(qml_files
     "SpinBox.qml"
     "TextArea.qml"
     "TextField.qml"
+    "ScrollView.qml"
 )
 set_source_files_properties(Button.qml PROPERTIES
     QT_QML_SOURCE_VERSION "6.0"
