CMake: Fix framework builds
After 5c1ed8bb74ee4eed9ffc9537b880104445b43cd7 in qtbase, the
framework version was changed from '6' to 'A'.
qtdeclarative had the '6' hardcoded for the qmldevtools module.
Switch it to 'A'.

Fixes: QTBUG-87031
Change-Id: I21a9e83dfe27904cd67a14371bbc8bb008175dc1
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/qmldevtools/CMakeLists.txt
+++ b/src/qmldevtools/CMakeLists.txt
@@ -60,7 +60,7 @@ qt_process_qlalr(QmlDevTools "${CMAKE_CURRENT_SOURCE_DIR}/../qml/parser/qqmljs.g
 qt_internal_module_info(qml_module "Qml")
 if(QT_FEATURE_framework)
     get_target_property(_qml_fw_headers_dir Qt::Qml LIBRARY_OUTPUT_DIRECTORY)
-    string(APPEND _qml_fw_headers_dir /${qml_module}.framework/Versions/${PROJECT_VERSION_MAJOR}/Headers)
+    string(APPEND _qml_fw_headers_dir /${qml_module}.framework/Versions/A/Headers)
     set(_qml_dev_tools_private_includes
         $<BUILD_INTERFACE:${_qml_fw_headers_dir}>
         $<BUILD_INTERFACE:${_qml_fw_headers_dir}/${PROJECT_VERSION}>
