Move the import handling code out of qmllint
We want to re-use this logic in other places.

Change-Id: I63cbee86a83265ddd241a4fae9ce8c48f38b5f18
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/tools/qmllint/CMakeLists.txt
+++ b/tools/qmllint/CMakeLists.txt
@@ -12,6 +12,7 @@ qt_add_tool(${target_name}
         ../shared/componentversion.cpp ../shared/componentversion.h
         ../shared/importedmembersvisitor.cpp ../shared/importedmembersvisitor.h
         ../shared/metatypes.h
+        ../shared/qmljsimporter.cpp ../shared/qmljsimporter.h
         ../shared/qmljstypereader.cpp ../shared/qmljstypereader.h
         ../shared/scopetree.cpp ../shared/scopetree.h
         ../shared/typedescriptionreader.cpp ../shared/typedescriptionreader.h
