Make tests explicitly use Basic where necessary
The previous commit changes the how the default style is set, and since
the tests all assumed that Basic was the default, we now need to
ensure it is explicitly set.

If we want to, we can revert this patch (or file-by-file) later and
ensure that these tests work with all styles. For now, just keep things
working as they used to.

Tests that use QTEST_QUICKCONTROLS_MAIN are not changed, as they
already run with all built-in styles.

Tests that don't use types that will cause issues,
like tst_qquickcolor, do not need to be changed.

tst_snippets can be run manually to produce screenshots, so we specify its
style in a qtquickcontrols2.conf file to allow it to be overridden by e.g.
application arguments (QQuickStyle::setStyle() takes precedence over all
other approaches of setting a style).

Change-Id: Ifae7e959f89a41a757c170272038fad139bba04f
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/tests/auto/pressandhold/CMakeLists.txt
+++ b/tests/auto/pressandhold/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_add_test(tst_pressandhold
     PUBLIC_LIBRARIES
         Qt::Gui
         Qt::Quick
+        Qt::QuickControls2
 )
 
 #### Keys ignored in scope 1:.:.:pressandhold.pro:<TRUE>:
