--- a/tools/qmlcachegen/CMakeLists.txt
+++ b/tools/qmlcachegen/CMakeLists.txt
@@ -9,16 +9,14 @@ qt_add_tool(${target_name}
     TARGET_DESCRIPTION "QML Cache Generator"
     TOOLS_TARGET Qml # special case
     SOURCES
-        ../shared/resourcefilemapper.cpp ../shared/resourcefilemapper.h
         generateloader.cpp
         qmlcachegen.cpp
         resourcefilter.cpp
     DEFINES
         QT_NO_CAST_FROM_ASCII
         QT_NO_CAST_TO_ASCII
-    INCLUDE_DIRECTORIES
-        ../shared
     PUBLIC_LIBRARIES
+        Qt::QmlCompilerPrivate
         Qt::QmlDevToolsPrivate
 )
 
