QmlCompiler: Rename QmlJSTypeReader
Add an extra 'Q' for consistency.

Change-Id: I81324f3b6e4d26a29f3bcc40b03abfa137292ea0
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/qmlcompiler/CMakeLists.txt
+++ b/src/qmlcompiler/CMakeLists.txt
@@ -8,13 +8,13 @@ qt_add_module(QmlCompiler
     STATIC
     INTERNAL_MODULE
     SOURCES
-        qmljstypereader.cpp qmljstypereader_p.h
         qqmljsimportedmembersvisitor.cpp qqmljsimportedmembersvisitor_p.h
         qqmljsimporter.cpp qqmljsimporter_p.h
         qqmljsmetatypes_p.h
         qqmljsresourcefilemapper.cpp qqmljsresourcefilemapper_p.h
         qqmljsscope.cpp qqmljsscope_p.h
         qqmljsstreamwriter.cpp qqmljsstreamwriter_p.h
+        qqmljstypereader.cpp qqmljstypereader_p.h
         typedescriptionreader.cpp typedescriptionreader_p.h
     PUBLIC_LIBRARIES
         Qt::CorePrivate
