Have templates depend on QtQuick
Templates defines a number of C++-based QML types, most of those are
derived from QQuickItem. Therefore, it actually needs QtQuick although
it never explicitly imports QtQuick. In order for tools to figure that
out, declare the QtQuick dependency in the qmldir file.

Task-number: QTBUG-87164
Change-Id: I982b4ee57102ac62b0ee6e8559e34c5e203a7a0f
Reviewed-by: Maximilian Goldstein <max.goldstein@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>

--- a/src/imports/templates/CMakeLists.txt
+++ b/src/imports/templates/CMakeLists.txt
@@ -8,6 +8,8 @@ qt_internal_add_qml_module(qtquicktemplates2plugin
     URI "QtQuick.Templates"
     VERSION "6.0" # special case
     CLASSNAME QtQuickTemplates2Plugin
+    DEPENDENCIES
+        QtQuick/auto
     SKIP_TYPE_REGISTRATION
     SOURCES
         qtquicktemplates2plugin.cpp
