Add optional imports for all the styles to controls/qmldir
This allows qmllint to find them.

Change-Id: I33b8ad4b2a736d914e7522761c2e574e482b9460
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>

--- a/src/imports/controls/CMakeLists.txt
+++ b/src/imports/controls/CMakeLists.txt
@@ -12,6 +12,14 @@ qt_internal_add_qml_module(qtquickcontrols2plugin
     SKIP_TYPE_REGISTRATION
     IMPORTS
         QtQuick.Controls.impl/auto
+    OPTIONAL_IMPORTS
+        QtQuick.Controls.Basic/auto
+        QtQuick.Controls.Fusion/auto
+        QtQuick.Controls.Material/auto
+        QtQuick.Controls.Imagine/auto
+        QtQuick.Controls.Universal/auto
+        QtQuick.Controls.Windows/auto
+        QtQuick.Controls.macOS/auto
     SOURCES
         qtquickcontrols2plugin.cpp
     DEFINES
