CMake: Allow installation of qmltypes files
This is what qmake does on install_qmltypes and we do want to install
the qmltypes files of our own modules.

Change-Id: Iad430aab87f21331abf332ca5c92f9d7edc47bb0
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/imports/labsmodels/CMakeLists.txt
+++ b/src/imports/labsmodels/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_internal_add_qml_module(labsmodelsplugin
     CLASSNAME QtQmlLabsModelsPlugin
     SKIP_TYPE_REGISTRATION
     GENERATE_QMLTYPES
+    INSTALL_QMLTYPES
     SOURCES
         plugin.cpp
     PUBLIC_LIBRARIES
