--- a/src/imports/settings/CMakeLists.txt
+++ b/src/imports/settings/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_internal_add_qml_module(qmlsettingsplugin
     CLASSNAME QmlSettingsPlugin
     SKIP_TYPE_REGISTRATION
     GENERATE_QMLTYPES
+    INSTALL_QMLTYPES
     SOURCES
         plugin.cpp
         qqmlsettings.cpp qqmlsettings_p.h
