--- a/src/imports/sharedimage/CMakeLists.txt
+++ b/src/imports/sharedimage/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_internal_add_qml_module(sharedimageplugin
     CLASSNAME QtQuickSharedImagePlugin
     SKIP_TYPE_REGISTRATION
     GENERATE_QMLTYPES
+    INSTALL_QMLTYPES
     SOURCES
         plugin.cpp
         qsharedimageloader.cpp qsharedimageloader_p.h
