--- a/src/imports/wavefrontmesh/CMakeLists.txt
+++ b/src/imports/wavefrontmesh/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_internal_add_qml_module(qmlwavefrontmeshplugin
     CLASSNAME QmlWavefrontMeshPlugin
     SKIP_TYPE_REGISTRATION
     GENERATE_QMLTYPES
+    INSTALL_QMLTYPES
     SOURCES
         plugin.cpp
         qwavefrontmesh.cpp qwavefrontmesh.h
