--- a/src/qmlcompiler/CMakeLists.txt
+++ b/src/qmlcompiler/CMakeLists.txt
@@ -8,8 +8,8 @@ qt_internal_add_module(QmlCompiler
     STATIC
     INTERNAL_MODULE
     SOURCES
-        qqmljsimportedmembersvisitor.cpp qqmljsimportedmembersvisitor_p.h
         qqmljsimporter.cpp qqmljsimporter_p.h
+        qqmljsimportvisitor.cpp qqmljsimportvisitor_p.h
         qqmljsmetatypes_p.h
         qqmljsresourcefilemapper.cpp qqmljsresourcefilemapper_p.h
         qqmljsscope.cpp qqmljsscope_p.h
