Native style: Add ScrollBar on Windows
Change-Id: I82c8cf3e637550cd458ac77f2cc4f6490dc11802
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>

--- a/src/imports/controls/windows/CMakeLists.txt
+++ b/src/imports/controls/windows/CMakeLists.txt
@@ -51,6 +51,7 @@ set(qml_files
     "SpinBox.qml"
     "TextArea.qml"
     "TextField.qml"
+    "ScrollBar.qml"
     "ScrollView.qml"
 )
 set_source_files_properties(Button.qml PROPERTIES
