QQuickShaderEffect: fix crash when hiding parent
It's possible for itemChange to be called during destruction when
deleting the QQuickShaderEffectImpl. We nullify m_impl before deleting
it via another pointer to it, so we must check that it's not null
before trying to use it.

Pick-to: 5.15
Fixes: QTBUG-86402
Change-Id: If4955445f7cc0d1f376bc9b86b95e1cca4d88ede
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/tests/auto/quick/qquickshadereffect/CMakeLists.txt
+++ b/tests/auto/quick/qquickshadereffect/CMakeLists.txt
@@ -27,6 +27,8 @@ set(resources_resource_files
     "data/connections.qml"
     "data/deleteShaderEffectSource.qml"
     "data/deleteSourceItem.qml"
+    "data/hideParent.qml"
+    "data/opacity-mask.frag.qsb"
     "data/red.frag"
     "data/star.png"
     "data/test.frag"
