CMake: Add generated qrc files to the qmlimportscanner
The list of generated qrc files is passed to qmlimportscanner via the
-qrcFiles parameter.

qt_import_qml_plugins(pointer) needs to be explicitly called in CMake
unlike qmake which does the equivalent behind the scenes.

Task-number: QTBUG-85994
Change-Id: Ia49a5e1fe5df11c0b3b8ff4c1765377767ca2478
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/tests/manual/pointer/CMakeLists.txt
+++ b/tests/manual/pointer/CMakeLists.txt
@@ -131,6 +131,7 @@ qt_internal_add_resource(pointer "quick_shared"
         ${quick_shared_resource_files}
 )
 
+qt_import_qml_plugins(pointer) # special case
 
 #### Keys ignored in scope 1:.:.:pointer.pro:<TRUE>:
 # TEMPLATE = "app"
