CMake: Adjust to public API renaming in qtbase
Task-number: QTBUG-86827
Change-Id: Ibeae878cbd7cc43031aeb13b2c480215c849f8bc
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/tests/auto/qml/qmltyperegistrar/foreign/CMakeLists.txt
+++ b/tests/auto/qml/qmltyperegistrar/foreign/CMakeLists.txt
@@ -13,7 +13,7 @@ qt_internal_add_cmake_library(foreign
 )
 # special case begin
 qt_enable_autogen_tool(foreign "moc" ON)
-qt6_generate_meta_types_json_file(foreign)
+qt6_extract_metatypes(foreign)
 # special case end
 
 #### Keys ignored in scope 1:.:.:foreign.pro:<TRUE>:
